AC_PREREQ(2.5.2)
AC_INIT(ccfx/ccfx.cpp,0.1)

AM_INIT_AUTOMAKE(1.8)

AC_PROG_CXX

AC_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])

PYTHON_INCLUDES=`python-config --cflags`
AC_SUBST(PYTHON_INCLUDES)
AM_PATH_PYTHON

# Check for JNI
AX_JNI_INCLUDE_DIR
for JNI_INCLUDE_DIR in $JNI_INCLUDE_DIRS
do
    CPPFLAGS="$CPPFLAGS -I$JNI_INCLUDE_DIR"
done

LT_INIT
CCFINDER_LIB_VER="0:1"
AC_SUBST(CCFINDER_LIB_VER)

AC_OUTPUT(
  Makefile
)
